--- a/thuan/style.css
+++ b/thuan/style.css
@@ -100,6 +100,95 @@ body {
   line-height: 1.5rem;
 }
 
+.side-menu {
+  width: 22.5rem;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+
+  background-color: var(--neutral-01);
+  padding: 1.5rem;
+
+}
+
+.top-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+  gap: 1rem;
+}
+
+.side-header {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.side-header img:first-child {
+  height: 1.5rem;
+}
+
+#search-bar {
+  display: flex;
+  flex-direction: row;
+  padding: 0.5rem 1rem;
+  gap: 0.5rem;
+  border: 1px solid var(--neutral-04);
+  border-radius: var(--border-cta-btn);
+}
+#search-bar input {
+  border: none;
+  height: 100%;
+}
+
+#search-bar input::placeholder {
+  font-family: "Inter";
+  font-size: 0.875rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.375rem;
+  color: var(--neutral-04);
+}
+
+.side-menu nav ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 1rem;
+}
+.side-menu .top-section nav ul li {
+  list-style-type: none;
+}
+
+.side-menu .top-section nav ul li a {
+  color: var(--color-primary);
+  font-family: "Inter";
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%;
+}
+
+.side-menu button {
+  width: 100%;
+  border-radius: var(--border-cta-btn);
+  border: none;
+
+  padding: 1rem 2.5rem;
+  color: var(--neutral-01);
+  background-color: var(--color-primary);
+  font-family: "Inter";
+  font-size: 1rem;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 1.5rem;
+}
+
 .header {
   width: 100%;
   display: flex;
@@ -208,7 +297,6 @@ body {
   width: 2rem;
   height: 2rem;
 }
-
 
 .header-nav nav ul {
   display: flex;
@@ -789,7 +877,6 @@ footer {
   font-style: normal;
   font-weight: 400;
   line-height: 150%;
-
 }
 
 .footer-below {
@@ -863,10 +950,8 @@ footer {
   overflow: hidden;
   background-color: rgba(235, 235, 235, 1);
 
-
   margin-bottom: 3.5rem;
   position: relative;
-
 }
 
 .catalog-banner img {
@@ -1127,8 +1212,6 @@ footer {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
-
-
   #grid-item-cards {
     width: 100%;
     display: grid;
@@ -1198,7 +1281,6 @@ footer {
     display: block;
   }
 
-
   /* catalog-banner */
   .catalog-banner {
     width: 100%;
@@ -1254,7 +1336,6 @@ footer {
     gap: 2.5rem;
   }
 
-
   .between {
     color: var(--neutral-02);
     padding-left: 2rem;
@@ -1277,7 +1358,6 @@ footer {
     padding: 0 1.25rem;
     margin: 0 auto;
   }
-
 
   .header-nav nav {
     display: none;
@@ -1314,7 +1394,6 @@ footer {
   .breadCrums {
     display: none;
   }
-
 
   /* body */
   .catalog-banner {
@@ -1366,7 +1445,6 @@ footer {
     font-weight: 700;
     line-height: 1.5rem;
   }
-
 
   /* body grid-content */
   .body-content {
@@ -1469,7 +1547,6 @@ footer {
 
     background-color: var(--color-secondary);
     border-radius: var(--border-img);
-
 
     color: var(--neutral-01);
     font-family: "Inter";
@@ -1601,7 +1678,7 @@ footer {
     display: flex;
     width: 7.6875rem;
     height: 2.5rem;
-    padding: 0.625rem .75rem;
+    padding: 0.625rem 0.75rem;
     justify-content: center;
     align-items: center;
   }
@@ -1643,7 +1720,6 @@ footer {
     gap: 2rem;
   }
 
-
   .between {
     color: var(--neutral-02);
     padding-left: 0rem;
@@ -1654,7 +1730,7 @@ footer {
     margin-bottom: 1rem;
   }
 
-  .footer-below{
+  .footer-below {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1663,7 +1739,7 @@ footer {
     gap: 1.5rem;
   }
 
-  .footer-below-left{
+  .footer-below-left {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1672,4 +1748,3 @@ footer {
     gap: 1.25rem;
   }
 }
-
