--- a/thuan/style.css
+++ b/thuan/style.css
@@ -25,6 +25,10 @@
 input {
   padding: 0;
   margin: 0;
+  appearance: none;
+  box-sizing: none;
+  padding-block: none;
+  padding-inline: none;
 }
 
 a,
@@ -89,6 +93,8 @@ body {
 
 /* HEADER SECTION */
 .add {
+  position: sticky;
+  top: 0;
   background: var(--color-primary);
   color: var(--neutral-01);
   padding: 0.25rem 5rem;
@@ -98,95 +104,20 @@ body {
   font-size: 1rem;
   font-weight: 500;
   line-height: 1.5rem;
+
+  z-index: 999;
 }
 
 .side-menu {
-  width: 22.5rem;
+  display: none;
+}
 
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-
+/* header */
+#header-section {
+  position: sticky;
+  top: 2rem;
+  z-index: 98;
   background-color: var(--neutral-01);
-  padding: 1.5rem;
-
-}
-
-.top-section {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: start;
-  gap: 1rem;
-}
-
-.side-header {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.side-header img:first-child {
-  height: 1.5rem;
-}
-
-#search-bar {
-  display: flex;
-  flex-direction: row;
-  padding: 0.5rem 1rem;
-  gap: 0.5rem;
-  border: 1px solid var(--neutral-04);
-  border-radius: var(--border-cta-btn);
-}
-#search-bar input {
-  border: none;
-  height: 100%;
-}
-
-#search-bar input::placeholder {
-  font-family: "Inter";
-  font-size: 0.875rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 1.375rem;
-  color: var(--neutral-04);
-}
-
-.side-menu nav ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: flex-start;
-  gap: 1rem;
-}
-.side-menu .top-section nav ul li {
-  list-style-type: none;
-}
-
-.side-menu .top-section nav ul li a {
-  color: var(--color-primary);
-  font-family: "Inter";
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
-}
-
-.side-menu button {
-  width: 100%;
-  border-radius: var(--border-cta-btn);
-  border: none;
-
-  padding: 1rem 2.5rem;
-  color: var(--neutral-01);
-  background-color: var(--color-primary);
-  font-family: "Inter";
-  font-size: 1rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: 1.5rem;
 }
 
 .header {
@@ -199,6 +130,7 @@ body {
 
   gap: 1.5rem;
   margin-bottom: 1.5rem;
+
 }
 
 /* SUB HEAD */
@@ -472,17 +404,6 @@ nav ul li a:hover::after {
   width: 100%;
 }
 
-/* .novelties-section h2 {
-  color: var(--color-primary);
-
-  font-family: "Poppins";
-  font-size: 3.5rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 4rem;
-  text-transform: uppercase;
-} */
-
 .novel-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -516,15 +437,6 @@ nav ul li a:hover::after {
   height: 100%;
   object-fit: cover;
 }
-
-/* .novel-title h6 {
-  color: var(--color-primary);
-  font-family: "Poppins";
-  font-size: 1.9375rem;
-  font-style: normal;
-  font-weight: 700;
-  line-height: normal;
-} */
 
 .novel-title p {
   color: var(--neutral-05);
@@ -1212,6 +1124,130 @@ footer {
 }
 
 @media only screen and (min-width: 768px) and (max-width: 1200px) {
+
+  /* side menu */
+  #side-menu.show-side-menu {
+    left: 0;
+  }
+
+  #side-menu {
+    position: fixed;
+    top: 5rem;
+    left: -30rem;
+    width: 22.5rem;
+    height: calc(100vh - 7rem);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+
+    background-color: var(--neutral-01);
+    padding: 1rem 2rem 1rem 4rem;
+    transition: left 0.3s ease;
+    z-index: 100;
+  }
+
+  .top-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    gap: 1.5rem;
+  }
+
+  .side-header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .side-header img:first-child {
+    height: 2rem;
+  }
+
+  form#search-bar {
+    height: 2rem;
+    width: 20.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
+    border: 1px solid var(--neutral-04);
+    border-radius: var(--border-cta-btn);
+  }
+
+  #search-bar input {
+    border: none;
+    height: 100%;
+    width: 100%;
+  }
+
+  #search-bar input::placeholder {
+    font-family: "Inter";
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.375rem;
+    color: var(--neutral-04);
+  }
+
+  .side-menu nav ul {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .side-menu .top-section nav ul li {
+    list-style-type: none;
+  }
+
+  .side-menu .top-section nav ul li a {
+    color: var(--color-primary);
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+  }
+
+  .side-menu button {
+    width: 100%;
+    border-radius: var(--border-cta-btn);
+    border: none;
+
+    padding: 1rem 2.5rem;
+    color: var(--neutral-01);
+    background-color: var(--color-primary);
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5rem;
+  }
+
+  div#overlay {
+    display: none;
+    position: fixed;
+    top: 5rem;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 99;
+    transition: top 0.3s ease;
+
+  }
+
+  /* body */
   #grid-item-cards {
     width: 100%;
     display: grid;
@@ -1274,6 +1310,9 @@ footer {
 
   /* header */
   .header-nav nav {
+    display: none;
+  }
+  .ic-search, .ic-personal{
     display: none;
   }
 
@@ -1345,9 +1384,125 @@ footer {
 
     text-align: end;
   }
+
+  /* DONE CATALOG PAGE */
+
+
+
+  /* HOMEPAGE */
+
+
+  /* hero sectoin tablet */
+  .hero-section {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1.5rem;
+    margin-bottom: 3.5rem;
+  }
+
+  .hero-section .hero-right {
+    width: 100%;
+    height: 26rem;
+    overflow: hidden;
+    border-radius: var(--border-img);
+    align-items: center;
+  }
+
+  .hero-right img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .hero-title {
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .hero-left {
+    width: 100%;
+    gap: 2rem;
+    align-items: start;
+  }
+
+  .hero-left button {
+    width: fit-content;
+    height: fit-content;
+    padding: 1rem 3rem;
+  }
+
+  /* novelties section */
+  div.novelties-section {
+    align-items: start;
+    gap: 1.5rem;
+    margin-bottom: 3.5rem;
+  }
+
+  .novel-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+
+  }
+
+  .novel-item-left {
+    grid-row-start: 1;
+    grid-row-end: 2;
+  }
+
+  .novel-item-left .img-card {
+    height: fit-content;
+  }
+
+  .novel-items .img-card {
+    height: 22rem;
+  }
+
+  /* card block */
+  .card-block {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 3.5rem;
+  }
+
+  .block-left-img {
+    height: 18rem;
+  }
+
+
+  /* turncouchtable tablet*/
+  .turnTableCouch-section {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 3.5rem;
+  }
+
+  .turnTable-left-side {
+    height: 22rem;
+  }
+
+  .turnTable-right-side {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .turnTable-right-side-title {
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .turnTable-right-side-title p {
+    width: 100%;
+  }
+
+  .turnTable-right-side-img {
+    width: 100%;
+    height: 20rem;
+  }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 767.5px) {
   :root {
     --border-img: 0.5rem;
     --border-cta-btn: 0.25rem;
@@ -1358,6 +1513,130 @@ footer {
     padding: 0 1.25rem;
     margin: 0 auto;
   }
+
+  /* side-menu */
+  #side-menu-homepage.show-side-menu {
+    left: 0;
+  }
+
+  #side-menu-homepage {
+    position: fixed;
+    top: 2rem;
+    left: -30rem;
+    width: 21.5rem;
+    height: calc(100vh - 4rem);
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+
+    background-color: var(--neutral-01);
+    padding: 1rem 1.5rem;
+    transition: left 0.3s ease;
+    z-index: 101;
+  }
+
+  .top-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: start;
+    gap: 1.5rem;
+  }
+
+  .side-header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .side-header img:first-child {
+    height: 1.5rem;
+  }
+
+  form#search-bar {
+    width: 19.25rem;
+    height: 2rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: start;
+    padding: 0.5rem 1rem;
+    gap: 0.5rem;
+    border: 1px solid var(--neutral-04);
+    border-radius: 0.5rem;
+  }
+
+  #search-bar input {
+    border: none;
+    height: 100%;
+    width: 100%;
+  }
+
+  #search-bar input::placeholder {
+    font-family: "Inter";
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.375rem;
+    color: var(--neutral-04);
+  }
+
+  .side-menu nav ul {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 1rem;
+  }
+
+  .side-menu .top-section nav ul li {
+    list-style-type: none;
+  }
+
+  .side-menu .top-section nav ul li a {
+    color: var(--color-primary);
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+  }
+
+  .side-menu button {
+    width: 100%;
+    border-radius: 0.5rem;
+    border: none;
+
+    padding: 1rem 2.5rem;
+    color: var(--neutral-01);
+    background-color: var(--color-primary);
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 1.5rem;
+  }
+
+  div#overlay-homepage {
+    display: none;
+    position: fixed;
+    top: 2rem;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 100;
+    transition: top 0.3s ease;
+
+  }
+
+  /* header */
 
   .header-nav nav {
     display: none;
@@ -1378,8 +1657,8 @@ footer {
     height: 1.5rem;
   }
 
-  .ic-search,
-  .ic-personal {
+  .header-nav .ic-search,
+  .header-nav .ic-personal {
     display: none;
   }
 
@@ -1662,9 +1941,6 @@ footer {
     line-height: 150%;
   }
 
-  /* .form{
-    width: 100%;
-  } */
   .form form {
     display: flex;
     justify-content: flex-start;
@@ -1746,5 +2022,218 @@ footer {
     align-items: flex-start;
 
     gap: 1.25rem;
+  }
+
+  /* END OF CATALOG PAGE */
+
+
+
+  /* HOMEPAGE RESPONSIVE MOBILE */
+  .hero-section {
+    flex-direction: column-reverse;
+    gap: 1rem;
+    align-items: flex-start;
+    margin-bottom: 2.5rem;
+  }
+
+  .hero-right {
+    width: 100%;
+    height: 16.5rem;
+    overflow: hidden;
+    border-radius: 0.75rem;
+  }
+
+  .hero-left {
+    width: 100%;
+    gap: 1rem;
+  }
+
+  .hero-title {
+    gap: 0.5rem;
+  }
+
+  .hero-title h1 {
+
+    font-family: "Poppins";
+    font-size: 2.4375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+  }
+
+  .hero-title p {
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+
+  }
+
+  .hero-left button {
+    width: 100%;
+    height: fit-content;
+    padding: 1rem 2.5rem;
+    border-radius: 0.5rem;
+  }
+
+  /* novelties */
+  .novelties-section {
+    gap: 1rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .novelties-section h2 {
+    width: 100%;
+    height: fit-content;
+    font-family: "Poppins";
+    font-size: 2.4375rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 120%;
+  }
+
+  .novel-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: auto auto auto;
+    gap: 1rem;
+  }
+
+  .novel-item-left {
+    margin-bottom: 0.5rem;
+  }
+
+  .novel-item-left .img-card {
+    height: 20rem;
+    width: 100%;
+  }
+
+  .novel-container h6 {
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 1.5rem;
+  }
+
+  .novel-container p {
+    font-family: "Inter";
+    font-size: 0.625rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 0.75rem;
+  }
+
+  .novel-items .img-card {
+    height: 9rem;
+  }
+
+  /* card block mobile */
+
+  .card-block {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-bottom: 2.5rem;
+  }
+
+  .block-right {
+    display: none;
+  }
+
+  .block-left {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+
+  .block-left-top {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .block-left-bottom {
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 1rem;
+    width: 100%;
+  }
+
+  .block-left-img {
+    width: 100%;
+    height: 18rem;
+  }
+
+  .block-title {
+    width: 100%;
+    gap: 0.5rem;
+  }
+
+  .block-title h2 {
+    width: 100%;
+    height: fit-content;
+    font-family: "Poppins";
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 3rem;
+  }
+
+  .block-title p {
+    width: 100%;
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 120%;
+  }
+
+  /* turncouchtable mobile*/
+  .turnTableCouch-section {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    margin-bottom: 2.5rem;
+  }
+
+  .turnTable-left-side {
+    height: 12rem;
+  }
+
+  .turnTable-right-side {
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
+  }
+
+  .turnTable-right-side-title {
+    width: 100%;
+    gap: 0.5rem;
+  }
+
+  .turnTable-right-side-title h2 {
+    width: 100%;
+    height: fit-content;
+    font-family: "Poppins";
+    font-size: 2.25rem;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 3rem;
+  }
+
+  .turnTable-right-side-title p {
+    width: 100%;
+    font-family: "Inter";
+    font-size: 1rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+  }
+
+  .turnTable-right-side-img {
+    width: 100%;
+    height: 20rem;
   }
 }
