--- a/thuan/style.css
+++ b/thuan/style.css
@@ -1514,7 +1514,7 @@ footer {
     margin: 0 auto;
   }
 
-  /* side-menu */
+  /* side-menu mobile */
   #side-menu.show-side-menu {
     left: 0;
   }
@@ -1523,7 +1523,7 @@ footer {
     position: fixed;
     top: 2rem;
     left: -30rem;
-    width: 21.5rem;
+    width: 80%;
     height: calc(100vh - 4rem);
 
     display: flex;
@@ -1559,12 +1559,12 @@ footer {
   }
 
   form#search-bar {
-    width: 19.25rem;
+    width: calc(100% - 2rem);
     height: 2rem;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    align-items: start;
+    justify-content: flex-start;
+    align-items: center;
     padding: 0.5rem 1rem;
     gap: 0.5rem;
     border: 1px solid var(--neutral-04);
@@ -1574,7 +1574,7 @@ footer {
   #search-bar input {
     border: none;
     height: 100%;
-    width: 100%;
+    /* width: calc(100% - 10rem);xem lại  */
   }
 
   #search-bar input::placeholder {
@@ -1636,7 +1636,7 @@ footer {
 
   }
 
-  /* header */
+  /* header mobile*/
 
   .header-nav nav {
     display: none;
@@ -1674,7 +1674,7 @@ footer {
     display: none;
   }
 
-  /* body */
+  /* body mobile*/
   .catalog-banner {
     display: flex;
     height: 9rem;
@@ -1725,7 +1725,7 @@ footer {
     line-height: 1.5rem;
   }
 
-  /* body grid-content */
+  /* body grid-content mobile */
   .body-content {
     width: 100%;
     display: flex;
@@ -1859,7 +1859,7 @@ footer {
     line-height: 1rem;
   }
 
-  /* grid-content-2 */
+  /* grid-content-2 mobile*/
   #grid-content-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -1902,7 +1902,7 @@ footer {
     gap: 0.5rem;
   }
 
-  /* newsletter */
+  /* newsletter mobile */
   #newsLetter {
     display: none;
   }
@@ -2073,7 +2073,7 @@ footer {
   .hero-left button {
     width: 100%;
     height: fit-content;
-    padding: 1rem 2.5rem;
+    padding: 1rem 2rem;
     border-radius: 0.5rem;
   }
 
