--- a/thuan/style.css
+++ b/thuan/style.css
@@ -172,7 +172,7 @@ body {
   border: none;
 }
 
-.shipping-btns button:first-child {
+/* .shipping-btns button:first-child {
   border: none;
   border-radius: 0.25rem;
 
@@ -190,6 +190,40 @@ body {
 }
 
 .shipping-btns button:last-child {
+  border: none;
+  border-radius: 0.25rem;
+  background-color: transparent;
+
+  width: 7.5rem;
+  height: 1.375rem;
+
+  color: var(--color-primary);
+  text-align: center;
+  font-family: "Inter";
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+} */
+
+.btn-active {
+  border: none;
+  border-radius: 0.25rem;
+
+  background-color: var(--neutral-01)!important;
+  width: 7.5rem;
+  height: 1.375rem;
+
+  color: var(--color-primary);
+  text-align: center;
+  font-family: "Inter";
+  font-size: 0.75rem;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1rem;
+}
+
+.shipping-btns button {
   border: none;
   border-radius: 0.25rem;
   background-color: transparent;
@@ -1522,7 +1556,7 @@ footer {
   #side-menu {
     position: fixed;
     top: 2rem;
-    left: -30rem;
+    left: -50rem;
     width: 80%;
     height: calc(100vh - 4rem);
 
